; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tools/tests/perf_index/extr_ramdisk.c_cleanup_ram_volume.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tools/tests/perf_index/extr_ramdisk.c_cleanup_ram_volume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [26 x i8] c"umount -f '%s' >/dev/null\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"asprintf failed\00", align 1
@.str.2 = private unnamed_addr constant [24 x i8] c"diskutil command failed\00", align 1
@PERFINDEX_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cleanup_ram_volume(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 @asprintf(i8** %3, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp sgt i32 %7, 0
  %9 = zext i1 %8 to i32
  %10 = call i32 @VERIFY(i32 %9, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @system(i8* %11)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp eq i32 %13, 0
  %15 = zext i1 %14 to i32
  %16 = call i32 @VERIFY(i32 %15, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0))
  %17 = load i8*, i8** %3, align 8
  %18 = call i32 @free(i8* %17)
  %19 = load i32, i32* @PERFINDEX_SUCCESS, align 4
  ret i32 %19
}

declare dso_local i32 @asprintf(i8**, i8*, i8*) #1

declare dso_local i32 @VERIFY(i32, i8*) #1

declare dso_local i32 @system(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
